fix pagina contato

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1457.3407626318808!2d-53.80064400311654!3d-29.686140331811547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9503cb4088000001%3A0xbb53997e0eb0ea64!2sBoa%20Forma%20Academias!5e0!3m2!1spt-BR!2sbr!4v1699519941934!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
-       ></iframe>
+       </iframe>
        </section>
       </div> 
     </main>
