--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -22,25 +22,41 @@
     </header>
     <main>
       <h1>Contato</h1>
-      <section class="contact-info">
-        <h2>Informações de Contato</h2>
-        <p>Telefone: (123) 456-7890</p>
-        <p>E-mail: contato@orangefitness.com</p>
-      </section>
-      <section class="contact-form">
-        <h2>Formulário de Contato</h2>
-        <form>
-          <label for="nome">Nome:</label>
-          <input type="text" id="nome" name="nome" required />
-
-          <label for="email">E-mail:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="mensagem">Mensagem:</label>
-          <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
-          <button type="submit">Enviar Mensagem</button>
-        </form>
-      </section>
+      <div class="contactInfo">
+        <section>
+          <h2>Informações de Contato</h2>
+           <address>
+            <p>
+              <a href="tel:+551234567890" alt="numero de telefone da empresa">Telefone:(123) 456-7890</a>
+            </p>
+            <p>
+              <a href="mailto:contato@orangefitness.com" alt="contato de email da empresa">E-mail: contato@orangefitness.com</a> 
+            </p>    
+          </address>         
+        </section>
+      </div>
+       <form>
+        <fieldset class="contactForm">
+          <div class="fieldsetWrapper">          
+          <legend>Formulário de Contato</legend>
+            <div class="input-wrapper"> 
+               <label for="nome">Nome <span>(mínimo 8 caracteres)</span>:</label>               
+              <input type="text" id="nome" name="nome" required minlength="8"/>                         
+            </div>
+            <div class="input-wrapper">
+              <label for="email">E-mail <span>(digite um email válido)</span>:</label>
+              <input type="email" id="email" name="email" required/>                            
+            </div>
+            <div class="input-wrapper">
+              <label for="mensagem">Mensagem:</label>   
+              <textarea id="mensagem" name="mensagem" rows="4" required></textarea>                         
+            </div>          
+            <div>              
+              <button type="submit" class="button">Enviar Mensagem</button>  
+            </div>
+         </div>
+        </fieldset>                 
+     </form>      
     </main>
     <footer class="footer">
       <section>
