--- a/assets/pages/horario.html
+++ b/assets/pages/horario.html
@@ -23,6 +23,9 @@
     <main>
       <h1>Horário de Aulas</h1>
       <section class="class-schedule">
+        <div>
+          <img src="../images/IMG_9927.jpg" alt="Imagem geral da Academia">
+        </div>
         <h2>Horário de Aulas</h2>
         <p>
           Confira nosso horário de aulas e treinamentos para planejar suas
