feito: nova pagina de contato

--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -21,8 +21,10 @@
     </nav>
 </header>
     <main >
-      <h1>Depoimentos</h1>
-      
+      <div class="herder">     
+        <img src="../images/depoimento1.jpg" alt="imagem de contato" class="imgMain">        
+        <h1>Depoimentos</h1>
+      </div>
       <section class="testimony">
         <h2 >Depoimento de Maria</h2>
         <p>
