--- a/assets/pages/horario.html
+++ b/assets/pages/horario.html
@@ -21,43 +21,47 @@
         </nav>
     </header>
     <main>
-      <h1>Horário de Aulas</h1>
-      <section class="class-schedule">
-        <div>
+      <div class="herder">     
+        <img src="../images/horario.jpg" alt="imagem de contato" class="imgMain">        
+        <h1>Horário de Aulas</h1>
+      </div>      
+      <section class="schedule">       
+        <section >
+          <p>
+            Confira nosso horário de aulas e treinamentos para planejar suas
+            visitas à academia:
+          </p>
+          <table>
+            <tr>
+              <th>Segunda-feira</th>
+              <td>Aulas de Grupo: 10h - 11h30</td>
+            </tr>
+            <tr>
+              <th>Terça-feira</th>
+              <td>Yoga: 18h - 19h30</td>
+            </tr>
+            <tr>
+              <th>Quarta-feira</th>
+              <td>Musculação: 8h - 21h</td>
+            </tr>
+            <tr>
+              <th>Quinta-feira</th>
+              <td>Aulas de Grupo: 9h - 10h30</td>
+            </tr>
+            <tr>
+              <th>Sexta-feira</th>
+              <td>Musculação: 7h - 20h</td>
+            </tr>
+            <tr>
+              <th>Sábado</th>
+              <td>Yoga: 10h - 11h30</td>
+            </tr>   
+          </table>
+        </section>
+        <section class="">
           <img src="../images/IMG_9927.jpg" alt="Imagem geral da Academia">
-        </div>
-        <h2>Horário de Aulas</h2>
-        <p>
-          Confira nosso horário de aulas e treinamentos para planejar suas
-          visitas à academia:
-        </p>
-        <table>
-          <tr>
-            <th>Segunda-feira</th>
-            <td>Aulas de Grupo: 10h - 11h30</td>
-          </tr>
-          <tr>
-            <th>Terça-feira</th>
-            <td>Yoga: 18h - 19h30</td>
-          </tr>
-          <tr>
-            <th>Quarta-feira</th>
-            <td>Musculação: 8h - 21h</td>
-          </tr>
-          <tr>
-            <th>Quinta-feira</th>
-            <td>Aulas de Grupo: 9h - 10h30</td>
-          </tr>
-          <tr>
-            <th>Sexta-feira</th>
-            <td>Musculação: 7h - 20h</td>
-          </tr>
-          <tr>
-            <th>Sábado</th>
-            <td>Yoga: 10h - 11h30</td>
-          </tr>
-        </table>
-      </section>
+        </section> 
+      </section>    
     </main>
     <footer class="footer">
       <section>
