feito: modificação de contato

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
           <li><a href="./assets/pages/membros.html">Membros</a></li>
           <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
+          <li><a href="./assets/pages/programas.html">Horários</a></li>
         </ul>
         
       </nav>
