--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/3734orangelogo4.ico" 
+    type="image/x-icon">
+    <script src="https://kit.fontawesome.com/f5e3366878.js" crossorigin="anonymous"></script>
     <title>Contato</title>
    
   </head>
@@ -12,29 +14,58 @@
     <header class="navegation">
         <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
         <nav>
-          <ul>               
-            <li><a href="./membros.html">Membros</a></li>
-            <li><a href="./carrinho.html">Carrinho</a></li>
-            <li><a href="./galeria.html">Galeria</a></li>
-            <li><a href="./horario.html">Horários</a></li>
-          </ul>
+            <ul>               
+                <li><a href="./carrinho.html">Carrinho</a></li>
+                <li><a href="./membros.html">Membros</a></li>
+                <li><a href="./galeria.html">Galeria</a></li>
+                <li><a href="./horario.html">Horários</a></li>    
+            </ul>
         </nav>
     </header>
-
-      <div class="login-form">
-          <h1>Entre em contato</h1>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Nome" id="Name">
-            <i class="fa fa-user"></i>
+    <main>
+     <div class="herder">     
+      <img src="../images/contato.jpg" alt="imagem de contato" class="imgMain">
+       <h1>Contato</h1>
+     </div>   
+     
+     <section class="contact">
+        <section class="contactInfo">
+          <div class="contacInfo__container">
+            <h2>Informações de Contato</h2>
+            <span>
+              <i class="fa-solid fa-phone-flip fa-lg" style="color: #512b1f;"></i>
+              (123) 456-7890
+            </span>
+            <span>
+              <i class="fa-brands fa-whatsapp fa-lg" style="color: #512b1f;"></i>         
+            +55(12) 99999-9999
+            </span>
+            <span>
+              <i class="fa-solid fa-envelope fa-lg" style="color: #512b1f;"></i>
+              contato@orangefitness.com
+            </span>      
+            <h2>Venha conhecer a nossa Academia</h2> 
+            <span>
+              <i class="fa-solid fa-location-dot fa-lg" style="color: #512b1f;"></i>
+              Endereço: Rua Benjamim Costanta, 960 
+              Santa Maria, RS, CEP: 97050-022     
+            </span>        
           </div>
-          <div class="form-group log-status">
-            <input type="email" class="form-control" placeholder="E-mail" id="E-mail">
-            <i class="fa fa-lock"></i>
-          </div>
-          <textarea class="form-control" placeholder="Mensagem" id="Message" rows="8"></textarea>
-          <button type="submit" class="log-btn" >Enviar</button>
-        </div>
- 
+        </section>
+        <section class="contactForm">
+          <form class="contactForm__container">        
+            <h2>Formulário de Contato</h2>
+            <label for="nome">Nome <span >(mínimo 8 caracteres)</span>:</label>               
+            <input type="text" id="nome" name="nome" required minlength="8"/>  
+            <label for="email">E-mail <span>(digite um email válido)</span>:</label>
+            <input type="email" id="email" name="email" required/>  
+            <label for="mensagem">Mensagem:</label>   
+            <input type="text" id="mensagem">  
+            <button type="submit" class="button">Enviar Mensagem</button>     
+          </form>      
+        </section>
+     </section>       
+    </main>
     <footer class="footer">
       <section>
         <img src="/assets/images/4.png" alt="logotipo da academia" class="footerLogo" />
@@ -98,19 +129,7 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                aria-label="Twitter"
-                width="34"
-                height="34"
-                viewBox="0 0 34 34"
-                fill="none"
-              >
-                <path
-                  d="M16.8895 0C7.56648 0 0 7.56648 0 16.8895C0 26.2124 7.56648 33.7789 16.8895 33.7789C26.2124 33.7789 33.7789 26.2124 33.7789 16.8895C33.7789 7.56648 26.2124 0 16.8895 0ZM24.3884 13.9845C24.3884 14.1196 24.3884 14.3223 24.3884 14.4574C24.3884 19.3215 20.6727 24.9288 13.9169 24.9288C11.8226 24.9288 9.86345 24.3208 8.24206 23.3075C8.51229 23.375 8.85008 23.375 9.12031 23.375C10.8768 23.375 12.4306 22.767 13.7142 21.8212C12.0929 21.7536 10.7417 20.7403 10.2688 19.254C10.4715 19.3215 10.7417 19.3215 10.9444 19.3215C11.2822 19.3215 11.62 19.254 11.8902 19.1864C10.2012 18.8486 8.91764 17.3624 8.91764 15.5383C8.91764 15.5383 8.91764 15.5383 8.91764 15.4707C9.39054 15.741 9.99856 15.9437 10.6066 15.9437C9.59321 15.2681 8.98519 14.1871 8.98519 12.9035C8.98519 12.228 9.18787 11.6199 9.4581 11.0119C11.2822 13.2413 13.9845 14.7276 17.0246 14.8627C16.957 14.5925 16.957 14.3223 16.957 14.052C16.957 12.0253 18.5784 10.3364 20.6727 10.3364C21.7536 10.3364 22.6994 10.8093 23.375 11.4848C24.1857 11.3497 24.9964 11.0119 25.7395 10.6066C25.4693 11.4848 24.8613 12.1604 24.1182 12.6333C24.8613 12.5658 25.6044 12.3631 26.2124 12.0253C25.7395 12.836 25.1315 13.5116 24.3884 13.9845Z"
-                  fill="white"
-                ></path>
-              </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" fill="white"/></svg>              
             </a>
           </li>
           <li>
@@ -119,21 +138,7 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="2.em"
-                viewBox="0 0 448 512"
-              >
-                <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                <style>
-                  svg {
-                    fill: #ffffff;
-                  }
-                </style>
-                <path
-                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
-                />
-              </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" fill="white"/></svg>
             </a>
           </li>
         </ul>
