feito: o CSS do Termos

--- a/assets/pages/areaMembros.html
+++ b/assets/pages/areaMembros.html
@@ -22,7 +22,7 @@
             </nav>
         </header>
     </header>
-    <main>
+    <main class="geral">
       <h1>Área de Membros</h1>
       <section class="member-features">
         <h2>Recursos para Membros</h2>
@@ -31,8 +31,7 @@
           <li>Acompanhamento do progresso</li>
           <li>Dicas exclusivas de treinamento</li>
         </ul>
-      </section>
-      
+      </section>      
     </main>
     <footer class="footer">
       <section>
@@ -128,7 +127,6 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
