--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -138,13 +138,12 @@
                   >Política de Privacidade</a>
               </li>  
             </ul>
-          </div>
+          </div>Programas de Treinament
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
