--- a/assets/pages/galeria.html
+++ b/assets/pages/galeria.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Galeria de Fotos</h1>
       <section class="photo-gallery">
         <h2>Fotos da Academia</h2>
@@ -143,7 +143,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
