--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Inscrição Online</h1>
       <section class="registration-form">
         <h2>Formulário de Inscrição</h2>
@@ -145,7 +145,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
