--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
     </header>
-    <main>
+    <main class="geral">
       <h1>Área de Membros</h1>
       <section class="member-features">
         <h2>Recursos para Membros</h2>
@@ -144,7 +144,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
