--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Política de Privacidade</h1>
       <p>
         Esta Política de Privacidade descreve como o Orange Fitness coleta, usa
@@ -178,7 +178,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
