--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Programas de Treinamentos</h1>
       <section class="program">
         <h2>Musculação</h2>
@@ -152,7 +152,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
