--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Sobre a Academia</h1>
       <section class="about">
         <h2>História</h2>
@@ -151,7 +151,7 @@
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              
             </ul>
           </div>
           <div  class="footerLinkPage">
