--- a/assets/pages/termos.html
+++ b/assets/pages/termos.html
@@ -22,7 +22,34 @@
         </nav>
   </header>
   <main>
-
+    <div class="herder">     
+      <img src="../images/termo de uso.jpg" alt="imagem de contato" class="imgTerm">
+      <h1>Termos de Uso</h1>
+     </div>     
+    <section class="termo">
+      <h2>1. Aceitação dos Termos</h2>
+      <p>Ao acessar este site, você concorda com estes termos de uso. Se você não concorda com algum destes termos, por favor, não use o site.</p>
+    </section>
+    <section class="termo">
+      <h2>2. Uso do Conteúdo</h2>
+      <p>Você concorda em usar o conteúdo deste site de maneira legal e ética. Qualquer uso indevido pode resultar em ações legais.</p>
+    </section >
+    <section class="termo">
+      <h2>3. Conta do Usuário</h2>
+      <p>Para acessar certos recursos do site, você pode precisar criar uma conta. Ao fazer isso, você concorda em fornecer informações precisas e atualizadas.</p>
+    </section>
+    <section class="termo">
+      <h2>4. Privacidade</h2>
+      <p>Nós respeitamos a sua privacidade. Consulte nossa política de privacidade para obter informações sobre como tratamos seus dados pessoais.</p>
+    </section>
+    <section class="termo">
+      <h2>5. Conteúdo do Usuário</h2>
+      <p>Você é responsável por qualquer conteúdo que enviar para o site e concorda em não violar os direitos de terceiros ao fazer isso.</p>
+    </section>
+    <section class="termo">
+      <h2>6. Modificações nos Termos</h2>
+      <p class="ultimo">Reservamo-nos o direito de modificar estes termos a qualquer momento. As alterações entram em vigor imediatamente após serem publicadas no site.</p>
+    </section>
   </main>
   <footer class="footer">
     <section>
@@ -118,7 +145,6 @@
           <ul>
             <li><a href="./inscricao.html">Matrícula</a></li>
             <li><a href="./contato.html">Contatos</a></li>
-            <li><a href="./faleConosco.html">Fale Conosco</a></li>
           </ul>
         </div>
         <div  class="footerLinkPage">
