--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/3734orangelogo4.ico">
     <title>Orange Fitness - Home</title>
   </head>
-  <body>
+  <body>     
     <header class="navegation">      
         <img src="./assets/images/orangelogozero.png" alt="logotipo"/>      
       <nav>
@@ -22,7 +22,7 @@
         
       </nav>
     </header>
-    <main>
+    <main class="geral">
       <div>
         <h1>Bem-vindo à Orange Fitness</h1>
       </div>      
@@ -156,7 +156,6 @@
             <ul>
               <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
               <li><a href="./assets/pages/contato.html">Contatos</a></li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
