--- a/assets/pages/faq.html
+++ b/assets/pages/faq.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="geral">
       <h1>Perguntas Frequentes (FAQ)</h1>
       <section class="faq">
         <h2>Perguntas Frequentes</h2>
@@ -145,8 +145,7 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li><a href="./inscricao.html">Matrícula</a></li>
-              <li><a href="./contato.html">Contatos</a></li>
-              <li><a href="./faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./contato.html">Contatos</a></li>           
             </ul>
           </div>
           <div  class="footerLinkPage">
