feito: css da pagina sobre

--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -21,8 +21,11 @@
             </ul>
         </nav>
     </header>
-    <main class="geral">
-      <h1>Sobre a Academia</h1>
+    <main>
+      <div class="herder">     
+        <img src="../images/Imagem do WhatsApp de 2023-11-01 à(s) 10.38.18_bc0a0149.jpg" alt="imagem de contato" class="imgTerm">
+         <h1>Sobre a Academia</h1>
+       </div>        
       <section class="about">
         <h2>História</h2>
         <p>
@@ -31,7 +34,7 @@
           físico.
         </p>
       </section>
-      <section class="mission">
+      <section class="about">
         <h2>Missão</h2>
         <p>
           Nossa missão é inspirar e capacitar as pessoas a viverem vidas mais
@@ -39,7 +42,7 @@
           atingir seus objetivos de fitness.
         </p>
       </section>
-      <section class="vision">
+      <section class="about">
         <h2>Visão</h2>
         <p>
           Nossa visão é ser a academia líder na promoção de um estilo de vida
@@ -47,13 +50,29 @@
           treinamento excepcionais e instalações de primeira classe.
         </p>
       </section>
-      <section class="values">
+      <section class="about">
         <h2>Valores</h2>
-        <ul>
-          <li>Compromisso com a excelência</li>
-          <li>Respeito e inclusão</li>
-          <li>Inovação constante</li>
-          <li>Atendimento ao cliente de primeira classe</li>
+        <ul class="aboutValue">
+          <li>
+            <img src="../images/excelencia.png" alt="icon do nosso compromisso pela excelência de nosso trabalho">
+            Compromisso com a excelência            
+          </li>
+          <li>
+            <img src="../images/respeito.png" alt="icon mostra nosso compromisso ao respeito a inclusão de todos">
+            Respeito e inclusão
+          </li>
+          <li>
+            <img src="../images/inovacao.png" alt="icon mostra nosso compromisso com a inovação costante" srcset="">
+            Inovação constante
+          </li>
+          <li>
+            <img src="../images/atendimento-ao-cliente.png" alt="icon mostra nosso compromisso como o nosso melhor atendimento">
+            Atendimento ao cliente de primeira classe
+          </li>          
+          <li>
+            <img src="../images/bem-estar.png" alt="icon mostra nosso compromisso como a saúde e o bem-estar de todos" srcset="">
+            Cuidado com a saúde e bem-estar dos nossos clientes
+          </li>
         </ul>
       </section>
     </main>
